--- a/src/assets/scss/_App.scss
+++ b/src/assets/scss/_App.scss
@@ -22,6 +22,7 @@ header {
   top: 0;
   left: 0;
   right: 0;
+  z-index: 2;
 }
 
 .logo {
@@ -66,6 +67,3 @@ $baseFontSize: 2rem;
 .form-check-label {
   user-select: none;
 }
-
-
-
