--- a/src/assets/scss/views/_Home.scss
+++ b/src/assets/scss/views/_Home.scss
@@ -1,8 +1,22 @@
 .Home {
-  border: 1px solid green;
+  min-height: 80vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-  #barcode-reader {
-    border: 1px solid red;
-    overflow: hidden;
+  .card-box {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    > div {
+      min-width: 240px;
+      width: 30%;
+      height: 180px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
   }
 }
