--- a/src/assets/scss/_variable.scss
+++ b/src/assets/scss/_variable.scss
@@ -2,8 +2,11 @@ $main-grey: #cacbc7;
 $grey1: #f2f2f2; // 背景但灰色用
 $gray2: #464646; // 文字
 
-$main-blue: #0d6efd;
+$main-blue: #153f90;
 
 $red: #dd4839;
 
 $green: #56ab68;
+
+// 改變 bootstrap 5 的顏色
+$primary: #153f90;
