--- a/src/assets/scss/views/_index.scss
+++ b/src/assets/scss/views/_index.scss
@@ -1,4 +1,15 @@
-@import './Login';
-@import './FormingMachine';
-@import './Home';
 @import './GUI';
+@import './Login';
+@import './Home';
+@import './FormingMachine';
+@import './FormingMachineFnEnter';
+@import './FormingMachinePatrol';
+@import './FormingMachineHandover';
+@import './FormingMachinePicking';
+@import './FormingMachineTroubleshooting';
+@import './FormingMachineReplaceProduct';
+@import './FormingMachineRestSwitch';
+@import './FormingMachineWaterLeakageAdjustment';
+@import './FormingMachineProductionInterruption';
+@import './FormingMachineClean';
+
