--- a/src/assets/scss/_App.scss
+++ b/src/assets/scss/_App.scss
@@ -12,7 +12,7 @@ a {
 .wrapper {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 80px 2rem 0 2rem;
+  padding: 80px 2rem 20px 2rem;
   font-weight: normal;
   min-height: 100vh;
 }
@@ -35,12 +35,16 @@ header.pageHeaber {
     margin-right: 30px;
     .logo {
       display: inline-block;
-      width: 40px;
+      width: 45px;
     }
   }
 
   .main-nav-box {
     display: inline-block;
+    user-select: none;
+    .logout-btn {
+      cursor: pointer;
+    }
     .menu-btn {
       font-size: 1.2rem;
       padding: 2px 10px;
@@ -84,6 +88,9 @@ header.pageHeaber {
   h5 {
     margin: 0;
     color: $main-blue;
+    > i {
+      margin: 0 10px;
+    }
   }
 }
 
@@ -91,18 +98,24 @@ header.pageHeaber {
 // 全域改變 bootstrap 的 css 樣式
 $baseFontSize: 2rem;
 .btn {
-  font-size: $baseFontSize;
+  font-size: 1.5rem;
+  &.btn-success {
+    color: #fff;
+    &:hover {
+      color: #fff;
+    }
+  }
 }
 .table {
 }
 .form-label {
-  font-size: 1.5rem;
+  font-size: 1.8rem;
 }
 .form-control {
   font-size: $baseFontSize;
 }
 .form-select {
-  font-size: $baseFontSize;
+  font-size: 1.5rem;
 }
 .form-check {
   margin-left: $baseFontSize;
