--- a/src/assets/scss/views/_Login.scss
+++ b/src/assets/scss/views/_Login.scss
@@ -4,13 +4,27 @@
   justify-content: center;
   min-height: 100vh;
   background-color: $grey1;
+  .logo-box {
+    text-align: center;
+    .logo {
+      width: 104px;
+      max-width: 60%;
+      margin: 10px;
+    }
+    .company-name {
+      width: 240px;
+      max-width: 60%;
+    }
+  }
   > div {
-    box-shadow: 0 5px 10px rgba($main-grey, 0.8);
+    box-shadow: 0 20px 25px rgba($main-grey, 0.8);
     background-color: #fff;
     border-radius: 10px;
-    border: 2px solid $main-blue;
+    border: 7px solid $main-blue;
+    border-radius: 50px;
     padding: 30px;
-    width: 80%;
+    // width: 100%;
+    max-width: 80vw;
     input, button, label {
       width: 100%;
     }
