--- a/src/assets/scss/views/_AdminLogin.scss
+++ b/src/assets/scss/views/_AdminLogin.scss
@@ -1,4 +1,4 @@
-.Login {
+.AdminLogin {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -25,7 +25,9 @@
     padding: 30px;
     // width: 100%;
     max-width: 80vw;
-    input, button, label {
+    input,
+    button,
+    label {
       width: 100%;
     }
     label {
