--- a/src/assets/scss/views/_ClientGUI.scss
+++ b/src/assets/scss/views/_ClientGUI.scss
@@ -1,5 +1,5 @@
-.GUI {
-  padding: 120px 20px 20px 20px;
+.ClientGUI {
+  padding: 20px 20px 20px 20px;
 }
 
 .one-gui-box {
@@ -11,4 +11,3 @@
     color: $main-blue;
   }
 }
-
