--- a/src/assets/scss/_variable.scss
+++ b/src/assets/scss/_variable.scss
@@ -1,6 +1,7 @@
 $main-grey: #cacbc7;
-$grey1: #f2f2f2; // 背景但灰色用
+$grey1: #f2f2f2; // 背景淡灰色用
 $gray2: #464646; // 文字
+$gray3: darken($main-grey, 10);
 
 $main-blue: #153f90;
 
