--- a/src/assets/scss/views/_index.scss
+++ b/src/assets/scss/views/_index.scss
@@ -1,7 +1,10 @@
 @import './ClientGUI';
 
-@import './AppHome';
 @import './AdminLogin';
+@import './AppHome';
+@import './AdminDefectiveUtilization';
+@import './AdminFormingMachineFailureHistory';
+
 @import './ClientHome';
 @import './FormingMachine';
 @import './FormingMachineFnEnter';
