--- a/src/assets/scss/views/_AppHome.scss
+++ b/src/assets/scss/views/_AppHome.scss
@@ -1,4 +1,34 @@
 .AppHome {
-  border: 2px solid red;
   text-align: center;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  .logo {
+    max-width: 145px;
+    margin-bottom: 18px;
+  }
+  h1 {
+    padding-bottom: 15px;
+    border-bottom: 2px solid $main-blue;
+    margin-bottom: 35px;
+    color: $main-blue;
+    width: 95%;
+    max-width: 430px;
+  }
+  a {
+    text-decoration: none;
+    margin: 10px;
+    padding: 40px;
+    background-color: $main-blue;
+    color: #fff;
+    display: inline-block;
+    font-size: 1.6rem;
+    &:hover {
+      box-shadow: 0 11px 10px rgba($gray2, 0.1);
+      background-color: lighten($main-blue, 10);
+    }
+  }
+
 }
