--- a/src/assets/scss/views/_index.scss
+++ b/src/assets/scss/views/_index.scss
@@ -4,6 +4,7 @@
 @import './AppHome';
 @import './AdminDefectiveUtilization';
 @import './AdminFormingMachineFailureHistory';
+@import './AdminReport';
 
 @import './ClientHome';
 @import './FormingMachine';
