--- a/src/assets/scss/_Print.scss
+++ b/src/assets/scss/_Print.scss
@@ -7,25 +7,39 @@
   //  page-break-inside: avoid; /* 使元素不會於換頁時中斷*/
   //  page-break-after: always; /* 碰到該元素時換頁 */
   //}
-  
 
   .AdminFull {
     // 要列印的區塊
-    .table-box {
+    .print-box {
       padding: 0;
       margin: 0;
-      width: calc(100% - 90px); // 表格容器寬度
-      border: 1px solid red;
-      table, .table {
+      //width: calc(100% - 90px); // 表格容器寬度
+      //border: 1px solid red; // 開發測試用
+
+      table,
+      .table {
         margin-bottom: 0;
         // 強迫列印模式都要把有顏色的地方都印出
-        -webkit-print-color-adjust: exact ;
+        -webkit-print-color-adjust: exact;
+        color-adjust: exact;
+      }
+      > * {
+        // 強迫列印模式都要把有顏色的地方都印出
+        -webkit-print-color-adjust: exact;
         color-adjust: exact;
       }
     }
 
+    .table-box {
+      padding: 0;
+      margin: 0;
+      border: 0;
+    }
     // 列印時不出現
-    .AdminMenu, .AdminHeader, .search-box {
+    .AdminMenu,
+    .AdminHeader,
+    .search-box,
+    .PaginationBox {
       display: none;
     }
     .no-print {
