報表樣板切版中

--- a/src/assets/scss/views/_AdminReport.scss
+++ b/src/assets/scss/views/_AdminReport.scss
@@ -14,6 +14,21 @@
   }
   .fc-red {
     color: red;
+    .span-check-box {
+      border-color: red;
+      &.active {
+        background-color: red;
+      }
+    }
+  }
+  .fc-blue {
+    color: blue;
+    .span-check-box {
+      border-color: blue;
+      &.active {
+        background-color: blue;
+      }
+    }
   }
   .bg-green {
     background-color: #90ca7d;
