--- a/src/assets/scss/views/_AdminReport.scss
+++ b/src/assets/scss/views/_AdminReport.scss
@@ -33,6 +33,9 @@
   .bg-green {
     background-color: #90ca7d;
   }
+  .border-red {
+    border-color: red;
+  }
   // 欄位中的元素靠期頭尾
   .flex-between {
     display: flex;
