--- a/src/assets/scss/views/_index.scss
+++ b/src/assets/scss/views/_index.scss
@@ -1,6 +1,6 @@
 @import './ClientGUI';
 
-@import './AdminLogin';
+@import './Login';
 @import './AppHome';
 @import './AdminDefectiveUtilization';
 @import './AdminFormingMachineFailureHistory';
