--- a/src/assets/scss/_ClientCustom.scss
+++ b/src/assets/scss/_ClientCustom.scss
@@ -188,3 +188,41 @@ $machineCardSize: 160px;
   background-color: #fff;
 }
 
+// 休息中介面
+.resting-view {
+  position: fixed;
+  left: 40px;
+  right: 40px;
+  top: 80px;
+  height: calc(100vh - 130px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  background-color: $main-blue;
+  border-radius: 20px;
+  span {
+    font-size: 17vw;
+    margin: -50px 0 0 0;
+  }
+  .choice-other-btn,
+  .start-work-btn {
+    position: absolute;
+    left: -30px;
+    bottom: -20px;
+    padding: 30px 0;
+    width: 40%;
+    min-width: 320px;
+    z-index: 1;
+    background-color: #fff;
+    border: 8px solid $main-blue;
+    color: $main-blue;
+    border-radius: 30px;
+    font-size: 40px;
+    box-shadow: 0 5px 10px rgba($gray2, 0.7);
+  }
+  .start-work-btn {
+    left: auto;
+    right: -30px;
+  }
+}
