--- a/src/assets/scss/views/_index.scss
+++ b/src/assets/scss/views/_index.scss
@@ -2,9 +2,11 @@
 
 @import './Login';
 @import './AppHome';
+
 @import './AdminDefectiveUtilization';
 @import './AdminFormingMachineFailureHistory';
 @import './AdminReport';
+@import './AdminProductManagement';
 
 @import './ClientHome';
 @import './FormingMachine';
