--- a/src/assets/scss/views/_FormingMachineTroubleshooting.scss
+++ b/src/assets/scss/views/_FormingMachineTroubleshooting.scss
@@ -1,3 +1,10 @@
 .FormingMachineTroubleshooting {
   background-color: #fff;
+
+  table {
+    border: 1px solid $main-grey;
+    td {
+      vertical-align: middle;
+    }
+  }
 }
