--- a/src/assets/scss/views/_index.scss
+++ b/src/assets/scss/views/_index.scss
@@ -7,6 +7,7 @@
 @import './AdminFormingMachineFailureHistory';
 @import './AdminReport';
 @import './AdminProductManagement';
+@import './AdminReplacementProductForm';
 
 @import './ClientHome';
 @import './FormingMachine';
