--- a/src/assets/scss/views/_FormingMachineReplaceProduct.scss
+++ b/src/assets/scss/views/_FormingMachineReplaceProduct.scss
@@ -1,3 +1,37 @@
 .FormingMachineReplaceProduct {
   background-color: #fff;
+
+  .step-box {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    > div {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 70px;
+      height: 70px;
+      font-size: 2.5rem;
+      background-color: darken($grey1, 40);
+      color: #fff;
+      border-radius: 100px;
+      //cursor: pointer;
+      user-select: none;
+      margin: 0 20px;
+      position: relative;
+      z-index: 1;
+      &.active {
+        background-color: $main-blue;
+      }
+    }
+    &:before {
+      content: '';
+      display: block;
+      border: 2px solid darken($grey1, 10);
+      position: absolute;
+      z-index: 0;
+      width: 260px;
+    }
+  }
 }
