--- a/src/assets/scss/views/_index.scss
+++ b/src/assets/scss/views/_index.scss
@@ -8,6 +8,7 @@
 @import './AdminReport';
 @import './AdminProductManagement';
 @import './AdminReplacementProductForm';
+@import './AdminFormingMachineMonitoringItemList';
 
 @import './ClientHome';
 @import './FormingMachine';
